# graduatework_authservice

./: .coveragerc  .env.sample  Dockerfile  README.md  Request Collection.postman_collection.json  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
users/: authenticate.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_invite_code_alter_user_password.py  0003_alter_user_invite_code.py  0004_alter_user_invite_code.py  0005_alter_user_options_alter_user_invited_by.py  0006_alter_user_invite_code_alter_user_invited_by.py  0007_remove_user_password_alter_user_invite_code_and_more.py
